--- a/oxidx_core/Cargo.toml
+++ b/oxidx_core/Cargo.toml
@@ -25,5 +25,9 @@ env_logger = "0.10"
 thiserror = "1.0"
 bytemuck = { version = "1.14", features = ["derive"] }
 
+# Async Assets
+rayon = "1.8"
+image = "0.25"
+
 [dev-dependencies]
 futures = "0.3"
