--- a/oxidx_std/Cargo.toml
+++ b/oxidx_std/Cargo.toml
@@ -11,6 +11,7 @@ oxidx_derive = { path = "../oxidx_derive" }
 glam = { workspace = true }
 wgpu = { workspace = true }
 winit = { workspace = true }
+chrono = "0.4"
 log = "0.4"
 rand = "0.9.2"
 
