--- a/oxidx_core/Cargo.toml
+++ b/oxidx_core/Cargo.toml
@@ -24,6 +24,8 @@ log = "0.4"
 env_logger = "0.10"
 thiserror = "1.0"
 bytemuck = { version = "1.14", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 # Async Assets
 rayon = "1.8"
