--- a/examples/showcase/Cargo.toml
+++ b/examples/showcase/Cargo.toml
@@ -11,3 +11,5 @@ rand = "0.8"
 log = "0.4"
 env_logger = "0.10"
 image = "0.25"
+serde_json = "1.0"
+oxidx_codegen = { path = "../../oxidx_codegen" }
