--- a/oxidx_std/Cargo.toml
+++ b/oxidx_std/Cargo.toml
@@ -14,6 +14,7 @@ winit = { workspace = true }
 chrono = "0.4"
 log = "0.4"
 rand = "0.9.2"
+serde_json = "1.0"
 
 [dev-dependencies]
 pollster = "0.3"
